--- a/copy/opt/local/etc/nginx/nginx.conf
+++ b/copy/opt/local/etc/nginx/nginx.conf
@@ -24,6 +24,7 @@ http {
 		location ~ \.php$ {
 			try_files $uri =404;
 			fastcgi_pass unix:/var/run/php-fpm.socket;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			fastcgi_index index.php;
 			include fastcgi_params;
 		}
