--- a/copy/opt/local/etc/nginx/nginx.conf
+++ b/copy/opt/local/etc/nginx/nginx.conf
@@ -13,6 +13,13 @@ http {
 	keepalive_timeout 65;
 	access_log        off;
 	server {
+		listen      80;
+		listen [::]:80;
+		server_name _;
+
+		return 301 https://$host$request_uri;
+	}
+	server {
 		listen      443 ssl;
 		listen [::]:443 ssl;
 		server_name _;
