--- a/copy/opt/local/etc/nginx/nginx.conf
+++ b/copy/opt/local/etc/nginx/nginx.conf
@@ -13,6 +13,16 @@ http {
 	keepalive_timeout 65;
 	access_log        off;
 	server {
+		listen 127.0.0.1:80;
+		server_name localhost;
+		location /nginx_status {
+			stub_status on;
+			access_log   off;
+			allow 127.0.0.1;
+			deny all;
+		}
+	}
+	server {
 		listen      80;
 		listen [::]:80;
 		server_name _;
