--- a/copy/opt/local/etc/php-fpm.conf
+++ b/copy/opt/local/etc/php-fpm.conf
@@ -499,8 +499,9 @@ pm.max_spare_servers = 3
 
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
-;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
-;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/fpm-php.www.log
-;php_admin_flag[log_errors] = on
-;php_admin_value[memory_limit] = 32M
+php_flag[display_errors] = off
+php_admin_value[error_log] = /var/log/fpm-php.log
+php_admin_value[memory_limit] = 128M
+php_admin_value[upload_tmp_dir] = /var/tmp
+php_admin_value[upload_max_filesize] = 256M
+php_admin_value[post_max_size] = 64M
