update max body size for nginx to allow bigger uploads

--- a/copy/opt/local/etc/nginx/nginx.conf
+++ b/copy/opt/local/etc/nginx/nginx.conf
@@ -12,6 +12,9 @@ http {
 	sendfile          on;
 	keepalive_timeout 65;
 	access_log        off;
+
+	client_max_body_size 256M;
+
 	server {
 		listen 127.0.0.1:80;
 		server_name localhost;
