--- a/copy/opt/local/etc/php.d/roundcub-php-extensions.ini
+++ b/copy/opt/local/etc/php.d/roundcub-php-extensions.ini
@@ -2,9 +2,11 @@ extension = dom.so
 extension = json.so
 extension = pdo.so
 extension = pdo_mysql.so
+extension = pdo_sqlite.so
 extension = iconv.so
 extension = mbstring.so
 extension = mcrypt.so
 extension = intl.so
 extension = exif.so
 extension = zip.so
+extension = zlib.so
